--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=FlightBookingSystem
+
+# Database configurations
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/flight_booking
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# server configurations
+server.port=8081
+server.servlet.context-path=/api/v1
